# LibarySystem_FinalProject

./: CMakeLists.txt  LibrarySystem.dev  LibrarySystem.layout  Makefile.win
LibrarySystem/: library_system.cpp  library_system.h  library_system_ui.cpp  library_system_ui.h  main.cpp
LibrarySystem/Model/: book.cpp  book.h  category.cpp  category.h  transaction.cpp  transaction.h  user.cpp  user.h
